# willow

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  PLAN.md  README.md  docker-compose.yml  eslint.config.js  flake.nix  justfile  package-lock.json  package.json  playwright.config.ts  skills-lock.json
.claude/: settings.json
crates/actor/: Cargo.toml  DESIGN.md
crates/actor/src/: actor.rs  addr.rs  broker.rs  context.rs  debounce.rs  derived.rs  envelope.rs  error.rs  fsm.rs  lib.rs  mailbox.rs  pool.rs  runtime.rs  state.rs  stream.rs  supervisor.rs  system.rs
crates/actor/tests/: performance.rs
crates/agent/: Cargo.toml
crates/agent/src/: auth.rs  lib.rs  main.rs  notifications.rs  resources.rs  scopes.rs  server.rs  tools.rs
crates/agent/tests/: e2e.rs
crates/app/: Cargo.toml
crates/app/src/: base64.rs  clipboard.rs  emoji.rs  file_manager.rs  invite.rs  lib.rs  main.rs  network_bridge.rs  notify.rs  server_sync.rs  storage.rs  tests.rs  text_edit.rs  theme.rs  ui.rs
crates/app/src/ui/: channels.rs  chat.rs  components.rs  constants.rs  files.rs  init.rs  input.rs  layout.rs  mod.rs  resources.rs  settings.rs
crates/app/tests/: e2e_flow.rs  integration.rs  peer_scale.rs
crates/channel/: Cargo.toml
crates/channel/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: accessors.rs  actions.rs  base64.rs  bridge.rs  client_actor.rs  client_actor_lockless.rs  connect.rs  emoji.rs  events.rs  files.rs  invite.rs  joining.rs  lib.rs  listeners.rs  mentions.rs  mutations.rs  network.rs  nickname.rs  ops.rs  persistence_actor.rs  presence.rs  queue.rs  relay_discovery.rs  servers.rs  state.rs  state_actors.rs  storage.rs  trust.rs  util.rs  views.rs  voice.rs  worker_cache.rs
crates/client/src/search/: actor.rs  bootstrap.rs  config.rs  derive.rs  execute.rs  handle.rs  highlight.rs  index.rs  mod.rs  query.rs  status.rs  tests.rs  tokenize.rs
crates/client/src/tests/: actions.rs  composer_views.rs  ephemeral.rs  governance.rs  heads_sync.rs  history_eose.rs  multi_peer_sync.rs  profile_view.rs  queue.rs  relay_discovery.rs  search.rs  sync_reply_cache.rs  trust_flow.rs  voice.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  relay_info.rs  wire.rs  worker_types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  sas.rs  sas_wordlist.rs
crates/feedback/: Cargo.toml  build.rs
crates/feedback/src/: lib.rs  main.rs  sanitize.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: hlc.rs  lib.rs  store.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  config.rs  file_transfer.rs  iroh.rs  lib.rs  mem.rs  node.rs  stub.rs  topics.rs  traits.rs
crates/network/tests/: integration.rs
crates/relay/: Cargo.toml
crates/relay/src/: event_store.rs  lib.rs  main.rs
crates/relay/tests/: bootstrap_endpoint.rs  capability_endpoint.rs  history_sync.rs  history_sync_passthrough.rs
crates/replay/: Cargo.toml
crates/replay/src/: main.rs  role.rs
crates/state/: Cargo.toml
crates/state/src/: compat.rs  dag.rs  ephemeral.rs  event.rs  hash.rs  lib.rs  managed.rs  materialize.rs  merge.rs  server.rs  store.rs  sync.rs  tests.rs  types.rs
crates/state/src/tests/: dag.rs  materialize.rs  permissions.rs  stress.rs  sync.rs  voting.rs
crates/storage/: Cargo.toml
crates/storage/src/: main.rs  role.rs  store.rs
crates/timeline/: Cargo.toml
crates/timeline/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/web/: Cargo.toml  components.css  foundation.css  index.html  init.js  manifest.json  style.css  sw.js  willow-chime.webm
crates/web/src/: app.rs  audio.rs  derived.rs  event_processing.rs  handlers.rs  icons.rs  keybindings.rs  lib.rs  main.rs  notifications.rs  palette_recents.rs  reaction_recency.rs  service_worker_bridge.rs  state.rs  state_bridge.rs  test_hooks.rs  trust_store.rs  upload_state.rs  util.rs  voice.rs  voice_note_player.rs
crates/web/src/components/: add_friend.rs  add_server.rs  archives_view.rs  bottom_sheet.rs  call_page.rs  channel_sidebar.rs  chat.rs  command_palette.rs  confirm_dialog.rs  context_menu.rs  downgrade_banner.rs  drag_overlay.rs  file_share.rs  grove_drawer.rs  grove_rail.rs  holder_pill.rs  inline_queue_note.rs  input.rs  join_page.rs  kind_chip.rs  lifecycle.rs  long_press.rs  main_pane_header.rs  member_list.rs  message.rs  mobile_shell.rs  mod.rs  offline_strip.rs  palette_actions.rs  participant_tile.rs  peer_status_label.rs  pinned.rs  presence_menu.rs  profile_card.rs  profile_popover.rs  profile_sheet.rs  queue_pill.rs  read_only_banner.rs  reconnection_toast.rs  relay_signal_button.rs  (+19 more)
crates/web/src/components/attachment/: file_card.rs  image.rs  mod.rs  voice_note.rs
crates/web/src/components/composer/: composer.rs  edit_bar.rs  mention_autocomplete.rs  meta_row.rs  mod.rs  placeholders.rs  reply_bar.rs  typing_indicator.rs
crates/web/src/components/emoji_picker/: categories.rs  mod.rs  picker.rs
crates/web/src/components/message_row/: code.rs  day_separator.rs  jump_latest.rs  mention.rs  mod.rs
crates/web/src/components/reactions/: add_chip.rs  mod.rs  strip.rs  tooltip.rs
crates/web/src/components/search/: input.rs  mod.rs  recents.rs  results.rs  row.rs  scope_chip.rs  surface.rs
crates/web/src/profile/: bus.rs  controller.rs  copy.rs  crest.rs  mod.rs  nickname_store.rs
crates/web/src/test_hooks/: dispatcher.rs  mod.rs  snapshot.rs  wire.rs
crates/web/tests/: browser.rs  static_assets.rs  test_hooks_browser.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  identity.rs  lib.rs  runtime.rs  types.rs
crates/worker/src/actors/: heartbeat.rs  mod.rs  network.rs  state.rs  sync.rs
crates/worker/tests/: integration.rs
docker/: relay-entrypoint.sh  relay.Dockerfile  replay-entrypoint.sh  replay.Dockerfile  storage-entrypoint.sh  storage.Dockerfile  web.Dockerfile
docs/: README.md
e2e/: README.md  basic-flow.spec.ts  cross-browser-sync.spec.ts  files-inline.spec.ts  (+15 more)
(+183 files in other folders)
