[workspace]
members = ["crates/*"]
exclude = ["crates/app"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto & Networking
iroh = "0.97"
iroh-base = "0.97"
iroh-gossip = "0.97"
iroh-blobs = "0.99"
iroh-relay = "0.97"
async-trait = "0.1"
bytes = "1"
blake3 = "1"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }

# Game engine / UI
bevy = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
