[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive", "rc"] }
bincode = "3.0"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime — no features at workspace level to avoid WASM mio conflict
tokio = { version = "1" }

# Async utilities (Stream/Future combinators)
futures = "0.3"

# Crypto & Networking
zeroize = { version = "1", features = ["derive"] }
iroh = "0.98"
iroh-base = "0.98"
iroh-gossip = "0.98"
iroh-blobs = "0.100"
iroh-relay = "0.98"
async-trait = "0.1"
bytes = "1"
blake3 = "1"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
# Portable monotonic clock. Native uses `std::time::Instant`; WASM uses
# `Performance.now()`. Drop-in replacement for `std::time::Instant` so
# lib crates can build for both targets without `#[cfg]` gates.
web-time = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Synchronization primitives (poison-free, WASM-compatible)
parking_lot = "0.12"

[workspace.lints.clippy]
let_underscore_must_use = "deny"
