[package]
name = "willow-actor"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Lightweight actor framework for Willow — dual-target (native + WASM)"

[dependencies]
futures = { workspace = true }
futures-core = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
