[package]
name = "willow-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "MCP server binary exposing Willow ClientHandle to AI agents"

[lib]
name = "willow_agent"
path = "src/lib.rs"

[[bin]]
name = "willow-agent"
path = "src/main.rs"

[dependencies]
willow-client = { path = "../client" }
willow-identity = { path = "../identity" }
willow-network = { path = "../network" }
willow-state = { path = "../state" }

rmcp = { version = "1.6", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
tokio-util = "0.7"
schemars = "1.0"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
dirs = "6"
subtle = "2"

[dev-dependencies]
willow-client = { path = "../client", features = ["test-utils"] }
willow-network = { path = "../network", features = ["test-utils"] }
tempfile = "3"
