[package]
name = "willow-app"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Bevy-based desktop UI for the Willow P2P chat application"

[dependencies]
willow-identity = { path = "../identity" }
willow-messaging = { path = "../messaging" }
willow-channel = { path = "../channel" }
willow-network = { path = "../network" }
willow-transport = { path = "../transport" }
willow-crypto = { path = "../crypto" }

bevy = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
