[package]
name = "willow-app"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Bevy-based desktop UI for the Willow P2P chat application"

[dependencies]
willow-identity = { path = "../identity" }
willow-messaging = { path = "../messaging" }
willow-channel = { path = "../channel" }
willow-network = { path = "../network" }
willow-transport = { path = "../transport" }
willow-crypto = { path = "../crypto" }
willow-files = { path = "../files" }

bevy = { workspace = true }
anyhow = { workspace = true }
rfd = "0.17"
uuid = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
futures = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "Navigator", "Clipboard"] }
