[package]
name = "willow-channel"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Servers, channels, roles, and permissions for Willow"

[dependencies]
willow-identity = { path = "../identity" }
willow-transport = { path = "../transport" }

serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
