[package]
name = "willow-channel"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Servers, channels, roles, and permissions for Willow"

[dependencies]
willow-identity = { path = "../identity" }
willow-transport = { path = "../transport" }
willow-crypto = { path = "../crypto" }

serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tokio = { workspace = true }
