[package]
name = "willow-client"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "UI-agnostic client library for the Willow P2P chat network"

[features]
test-utils = ["willow-network/test-utils"]

[dependencies]
willow-actor = { path = "../actor" }
willow-identity = { path = "../identity" }
willow-messaging = { path = "../messaging" }
willow-network = { path = "../network" }
willow-transport = { path = "../transport" }
willow-crypto = { path = "../crypto" }
willow-state = { path = "../state" }
willow-common = { path = "../common" }

anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tempfile = "3"
willow-network = { path = "../network", features = ["test-utils"] }
