[package]
name = "willow-client"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "UI-agnostic client library for the Willow P2P chat network"

[features]
test-utils = ["willow-network/test-utils"]

[dependencies]
willow-actor = { path = "../actor" }
willow-identity = { path = "../identity" }
willow-messaging = { path = "../messaging" }
willow-network = { path = "../network" }
willow-transport = { path = "../transport" }
willow-crypto = { path = "../crypto" }
willow-state = { path = "../state" }
willow-common = { path = "../common" }

anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `wasm-bindgen` (alongside `web-sys` / `wasm-bindgen-futures`) is required
# by the Phase 2b online / offline listener in `connect.rs` — the whole
# block is `#[cfg(target_arch = "wasm32")]`-gated so the dep stays
# WASM-only. Matches the pattern already established for `gloo-timers`
# and the presence / queue tick drivers.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Navigator",
    "EventTarget",
] }
js-sys = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }

[dev-dependencies]
tempfile = "3"
willow-network = { path = "../network", features = ["test-utils"] }
