[package]
name = "willow-client"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "UI-agnostic client library for the Willow P2P chat network"

[features]
test-utils = ["willow-network/test-utils"]
# Read-only test instrumentation hooks. Distinct from `test-utils`:
# `test-hooks` exposes narrow accessors for the web crate's
# `WillowTestHooks` (Promise-returning JS pull API) without enabling
# `MemNetwork`. See `docs/specs/2026-04-27-event-based-waits-design.md`.
test-hooks = []

[dependencies]
willow-actor = { path = "../actor" }
willow-identity = { path = "../identity" }
willow-messaging = { path = "../messaging" }
willow-network = { path = "../network" }
willow-transport = { path = "../transport" }
willow-crypto = { path = "../crypto" }
willow-state = { path = "../state" }
willow-common = { path = "../common" }

anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde_json = "1"
parking_lot = { workspace = true }
futures = { workspace = true }
web-time = { workspace = true }
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `wasm-bindgen` (alongside `web-sys` / `wasm-bindgen-futures`) is required
# by the Phase 2b online / offline listener in `connect.rs` — the whole
# block is `#[cfg(target_arch = "wasm32")]`-gated so the dep stays
# WASM-only. Matches the pattern already established for `gloo-timers`
# and the presence / queue tick drivers.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Navigator",
    "EventTarget",
] }
js-sys = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }

[dev-dependencies]
tempfile = "3"
hex = "0.4"
willow-network = { path = "../network", features = ["test-utils"] }
