[package]
name = "willow-common"
version = "0.1.0"
edition.workspace = true

[dependencies]
willow-state = { path = "../state" }
willow-identity = { path = "../identity" }
willow-transport = { path = "../transport" }
serde = { workspace = true }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
hex = "0.4"
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
