[package]
name = "willow-crypto"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "E2E encryption primitives for the Willow P2P chat network"

[dependencies]
willow-identity = { path = "../identity" }
willow-transport = { path = "../transport" }
willow-messaging = { path = "../messaging" }

chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
hkdf = "0.12"
sha2 = "0.10"
blake3 = { workspace = true }
rand = "0.8"
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
