[package]
name = "willow-files"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Content-addressed file chunking and reassembly for Willow P2P"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
willow-transport = { path = "../transport" }
