[package]
name = "willow-identity"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Cryptographic identity, message signing, and user profiles for Willow"

[dependencies]
willow-transport = { path = "../transport" }

iroh-base = { workspace = true, features = ["key"] }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rand = "0.9"
zeroize = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tempfile = "3"
