[package]
name = "willow-messaging"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Chat messages, reactions, threads, and Hybrid Logical Clock ordering for Willow"

[dependencies]
willow-identity = { path = "../identity" }
willow-transport = { path = "../transport" }

serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
