[package]
name = "willow-messaging"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Chat messages, reactions, threads, and Hybrid Logical Clock ordering for Willow"

[dependencies]
willow-identity = { path = "../identity" }
willow-transport = { path = "../transport" }

serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tokio = { workspace = true }
