[package]
name = "willow-network"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "P2P networking layer for Willow using iroh"

[features]
test-utils = []

[dependencies]
willow-identity = { path = "../identity" }
iroh-base = { workspace = true, features = ["key"] }
iroh-gossip = { workspace = true, default-features = false }

async-trait = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
futures-lite = "2"

# Native-only: full iroh networking (pulls in tokio, mio, etc.)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iroh = { workspace = true }
iroh-blobs = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "sync"] }
tracing-subscriber = { workspace = true }
