[package]
name = "willow-network"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "P2P networking layer for Willow using iroh"

[features]
test-utils = []

[dependencies]
willow-identity = { path = "../identity" }
iroh = { workspace = true }
iroh-base = { workspace = true, features = ["key"] }
iroh-gossip = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
futures-lite = "2"

# iroh-blobs pulls in bao-tree → tokio net (mio) which doesn't compile
# on WASM. Gate as native-only; use BlobHash wrapper for cross-platform.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iroh-blobs = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# WASM-only: gloo-timers provides a Future-based setTimeout for timeouts.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "sync"] }
tracing-subscriber = { workspace = true }
