[package]
name = "willow-relay"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Iroh relay server + bootstrap gossip node for Willow"

[[bin]]
name = "willow-relay"
path = "src/main.rs"

[dependencies]
willow-identity = { path = "../identity" }
willow-network = { path = "../network" }
willow-common = { path = "../common" }

iroh = { workspace = true }
iroh-base = { workspace = true }
iroh-relay = { workspace = true, features = ["server"] }
iroh-gossip = { workspace = true }

tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
