[package]
name = "willow-relay"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Iroh relay server + bootstrap gossip node for Willow"

[[bin]]
name = "willow-relay"
path = "src/main.rs"

[dependencies]
willow-identity = { path = "../identity" }
willow-network = { path = "../network" }
willow-common = { path = "../common" }
willow-transport = { path = "../transport" }

iroh = { workspace = true }
iroh-base = { workspace = true }
iroh-relay = { workspace = true, features = ["server"] }
iroh-gossip = { workspace = true }

tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
hex = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
willow-network = { path = "../network", features = ["test-utils"] }
willow-identity = { path = "../identity" }
willow-common = { path = "../common" }
willow-transport = { path = "../transport" }
bytes = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

