[package]
name = "willow-replay"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "willow-replay"
path = "src/main.rs"

[dependencies]
willow-worker = { path = "../worker" }
willow-state = { path = "../state" }
willow-identity = { path = "../identity" }
willow-network = { path = "../network" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
