[package]
name = "willow-state"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Pure deterministic event-sourced state machine for the Willow P2P chat network"

[dependencies]
bincode = { workspace = true }
iroh-base = { workspace = true, features = ["key"] }
serde = { workspace = true }
sha2 = "0.10"
willow-identity = { path = "../identity" }
