[package]
name = "willow-transport"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Binary serialization and protocol framing for Willow P2P messages"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
