[package]
name = "willow-web"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Leptos web UI for the Willow P2P chat network"

[dependencies]
willow-client = { path = "../client" }
leptos = { version = "0.7", features = ["csr"] }
tracing = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "HtmlTextAreaElement", "HtmlCollection", "NodeList",
    "KeyboardEvent", "KeyboardEventInit",
    "EventTarget", "InputEvent", "InputEventInit",
    "MouseEvent", "DomTokenList",
    "Blob", "File", "FileList", "FileReader", "Url",
    "Clipboard", "Navigator", "CssStyleDeclaration", "HtmlDocument",
    "TouchEvent", "TouchList", "Touch",
    "RtcPeerConnection", "RtcSessionDescriptionInit", "RtcSdpType",
    "RtcIceCandidate", "RtcIceCandidateInit", "RtcConfiguration",
    "RtcIceServer", "RtcPeerConnectionIceEvent", "RtcTrackEvent",
    "RtcRtpSender", "MediaStream", "MediaStreamTrack",
    "MediaStreamConstraints", "MediaDevices", "HtmlMediaElement",
    "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
send_wrapper = "0.6"
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
