[package]
name = "willow-worker"
version = "0.1.0"
edition.workspace = true

[dependencies]
willow-actor = { path = "../actor" }
willow-common = { path = "../common" }
willow-state = { path = "../state" }
willow-identity = { path = "../identity" }
willow-transport = { path = "../transport" }
willow-network = { path = "../network" }
serde = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
# Native-only worker runtime (tokio "full"); used to draw a per-run random
# `stream_generation` for HistorySyncComplete markers (pinned decision 6).
rand = "0.9"

[features]
test-utils = []

[dev-dependencies]
willow-network = { path = "../network", features = ["test-utils"] }
async-trait = { workspace = true }
tempfile = "3"
